62-prometheus-grafana-cadvisor-graphiques/grafana/ingress-grafana.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: grafana.kub
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
